# oct-api-server

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  example.yml
deploy/: template.yaml
doc/: mkdocs.yml
doc/docs/: getting-started.md  index.md  todo.md
doc/docs/javascripts/: gtag.js
orm/: manage.py  requirements.txt
orm/orm/: settings.py  urls.py
orm/rest/: admin.py  models.py  views.py
orm/rest/migrations/: 0001_initial.py  0002_auto_20211202_1742.py  0003_auto_20211211_1127.py
scripts/: deploy  devserver
src/: alert.rs  api.rs  apps.rs  auth.rs  config.rs  db.rs  graphql.rs  http.rs  main.rs  meta.rs  model.rs  orm.rs  stats.rs  stor.rs  types.rs  worker.rs
tests/: base.py  test_app.py  test_tutorial.py
tests/data/: ch02.yml  ch03.yml  ch04.yml  graphql-01-data.json  graphql-01-query.txt  graphql-01-result.json  graphql.yml
ui/: README.md  package-lock.json  package.json  vue.config.js
ui/src/: App.vue  main.js
ui/src/components/: footer.vue  nav.vue
ui/src/router/: index.js
ui/src/views/: Home.vue  app-overview.vue  dashboard.vue  feedback.vue  login-confirm.vue  login.vue
