[package]
name = "oct-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oct-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.13.0", features = ["full" ] }
tokio-stream = "0.1"
tokio-util = "0.6.9"
hyper = { version = "0.14.14", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.59"
rusqlite = "0.26.1"
regex = "1.5.4"
url = "2.2.2"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
chrono = { version = "0.4.19", features = ["serde"] }
file-lock = "1.1.20"
futures = "0.3.17"
rand = "0.8.4"
clap = "2.34.0"
lazy_static = "1.4.0"
graphql-parser = "0.4.0"
tempfile = "3.2.0"
